# RustyOS

./: Cargo.toml  README.md  rusty.json
.cargo/: config.toml
src/: main.rs
